<resources>
    <string name="app_name">Android App Project</string>
    <string name="save_car">Save Car</string>
    <string name="car_name_hint">Car Name</string>
    <string name="description_hint">Description</string>
    <string name="make_hint">Make</string>
    <string name="model_hint">Model</string>
    <string name="engine_hint">Engine displacement (cc)</string>
    <string name="select_gas_type">Select Gas Type</string>
    <string name="select_distance_unit">Select Distance Unit</string>
    <string name="select_volume_unit">Select Volume Unit</string>
    <string name="select_consumption_unit">Select Consumption Unit</string>
    <string name="add_car">Add Car</string>
    <string name="car_name">Car Name</string>
    <string name="description">Description</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="engine_displacement_cc">Engine displacement (cc)</string>
    <string name="car_app">CAR APP</string>
    <string name="no_cars_added">No Cars Added</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>